# AnimTimeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animtimeline.cpp  animtimeline.h  animtimeline.ui  configurations.h  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdoublespinboxsmart.cpp  qdoublespinboxsmart.h  qframebuttons.cpp  qframebuttons.h  qframeplayzone.cpp  qframeplayzone.h  qframeselector.cpp  qframeselector.h  qframetimescale.cpp  qframetimescale.h  qlabelslider.cpp  qlabelslider.h  qscrollarearuler.cpp  qscrollarearuler.h  qspinboxsmart.cpp  qspinboxsmart.h  qtoolbuttonplaypause.cpp  qtoolbuttonplaypause.h  qwidgetruler.cpp  qwidgetruler.h  session.cpp  session.h  timeline.qrc
images/: help.xcf
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/AnimTimeline/: AnimTimelineSession.cpp  AnimTimelineSession.h  FormAnimTimeline.cpp  FormAnimTimeline.h  FormAnimTimeline.ui  QWidgetSlider.cpp  QWidgetSlider.h  animtimeline.cpp  animtimeline.ui  configurations.h  qdoublespinboxsmart.cpp  qframebuttons.cpp  qframebuttons.h  qframeselector.cpp  qframeselector.h  qframetimescale.cpp  qframetimescale.h  qlabelslider.h  qscrollarearuler.cpp  qscrollarearuler.h  qspinboxsmart.cpp  qtoolbuttonplaypause.cpp  qtoolbuttonplaypause.h  qwidgetruler.cpp  qwidgetruler.h  session.cpp  session.h
testAnimTimeline/: animtimeline.cpp  animtimeline.h  animtimeline.ui  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qframeselector.cpp  qframeselector.h  qframetimescale.cpp  qframetimescale.h  qlabelslider.cpp  qlabelslider.h  qscrollarearuler.cpp  qscrollarearuler.h  qtoolbuttonplaypause.cpp  qtoolbuttonplaypause.h  qwidgetruler.cpp  qwidgetruler.h  testAnimTimeline.pro  timeline.qrc
testAnimTimeline/images/: key.xcf  play.xcf
